Área do Professor Completa e Alocação dos Alunos

--- a/base_templates/global/home.html
+++ b/base_templates/global/home.html
@@ -60,9 +60,9 @@
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
-                                    href="resume.html">Resume</a>
+                                    href={% url 'login' %}> LOGIN </a>
                                 <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                                    href="projects.html">Projects</a>
+                                    href={% url 'signup' %}> CADASTRO </a>
                             </div>
                         </div>
                     </div>
