--- a/base_templates/registration/login.html
+++ b/base_templates/registration/login.html
@@ -1,6 +1,7 @@
-{% extends 'registration/base.html' %} 
+{% extends "registration/base.html" %}
 
 {% block content %}
+
 <section>
   <div class="container">
     <div class="row">
@@ -44,4 +45,5 @@
     </div>
   </div>
 </section>
+
 {% endblock %}
