--- a/base_templates/registration/signup_form.html
+++ b/base_templates/registration/signup_form.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-6 offset-md-3 mt-3">
 
-        <form method="post" action="{% url 'student_signup' %}">  
+        <form method="post" novalidate>     
           {% csrf_token %} {% for field in form %}
           <div class="form-group">
             {{ field.label_tag }}
